# kart-dashboard

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  main.py  requirements.txt  run.sh
config/: config.example.yaml  config.yaml
docs/: architecture.md  spec_ui.md
docs/ui/: cluster.md
src/: __init__.py  main.py  main_window.py  qt_compat.py  styles.qss
src/config/: loader.py  settings.py
src/core/: __init__.py  alerts.py  base_data_service.py  borne_i2c_service.py  charger_i2c_service.py  hardware_service.py  mock_service.py  model.py  state.py  state_store.py  store.py  types.py  variator_i2c_service.py
src/data/: logger.py  worker.py
src/data/sources/: __init__.py  base.py  i2c.py  simulated.py
src/models/: __init__.py  telemetry.py  telemetry_model.py
src/services/: base.py  fake.py  fake_data_service.py  poller.py
src/ui/: __init__.py  cluster_screen.py  dashboard.py  details_screen.py  diag_view.py  drive_screen.py  drive_view.py  main_window.py  screens.py  tech_screen.py  theme.py  visibility.py
src/ui/components/: __init__.py  analog_gauge.py  battery_elements.py  battery_icon.py  battery_widget.py  bottom_bar.py  car_simulation_widget.py  cell_widget.py  center_panel.py  circular_gauge.py  dynamics_widget.py  energy_widget.py  indicator_elements.py  indicator_row.py  kart_top_view_widget.py  kart_visual_widget.py  kart_widget.py  leaf_power_gauge.py  mini_gauge.py  modern_battery.py  modern_dynamics.py  nav_bar.py  pack_battery_widget.py  power_bar.py  power_widget.py  speed_gauge_oem.py  status_strip.py  status_widgets.py  (+2 more)
(+4 files in other folders)
